CREATE TABLE IF NOT EXISTS region (
    id_region INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    region_name VARCHAR(255) NOT NULL,
    region_code VARCHAR(100) NOT NULL UNIQUE,
    region_type VARCHAR(100) NOT NULL,
    geometry GEOMETRY(MULTIPOLYGON, 4326),
    bbox_lat_min NUMERIC(9, 6),
    bbox_lat_max NUMERIC(9, 6),
    bbox_lon_min NUMERIC(9, 6),
    bbox_lon_max NUMERIC(9, 6),
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    updated_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS indicator (
    id_indicator INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    indicator_code VARCHAR(100) NOT NULL UNIQUE,
    indicator_name VARCHAR(255) NOT NULL,
    description TEXT,
    unit VARCHAR(50) NOT NULL,
    is_active BOOLEAN NOT NULL DEFAULT TRUE,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    updated_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS data_source (
    id_data_source INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    source_name VARCHAR(255) NOT NULL UNIQUE,
    provider VARCHAR(255) NOT NULL,
    access_url TEXT,
    license_name VARCHAR(255),
    description TEXT,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    updated_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS data_product (
    id_data_product INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    fk_data_source INTEGER NOT NULL REFERENCES data_source(id_data_source),
    product_code VARCHAR(150) NOT NULL UNIQUE,
    platform VARCHAR(100) NOT NULL,
    instrument VARCHAR(100) NOT NULL,
    processing_level VARCHAR(50) NOT NULL,
    variable_name VARCHAR(255) NOT NULL,
    quality_variable_name VARCHAR(255),
    product_group VARCHAR(100) NOT NULL,
    description TEXT,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    updated_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS source_file (
    id_source_file INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    fk_data_product INTEGER NOT NULL REFERENCES data_product(id_data_product),
    external_product_id VARCHAR(100) NOT NULL UNIQUE,
    product_name TEXT NOT NULL,
    local_file_path TEXT,
    file_format VARCHAR(50) NOT NULL,
    file_size_bytes BIGINT,
    checksum VARCHAR(255),
    sensing_start_at TIMESTAMP WITH TIME ZONE,
    sensing_end_at TIMESTAMP WITH TIME ZONE,
    downloaded_at TIMESTAMP WITH TIME ZONE,
    download_status VARCHAR(50) NOT NULL DEFAULT 'pending',
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    updated_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW()
);

CREATE TABLE IF NOT EXISTS processing_run (
    id_processing_run INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    fk_source_file INTEGER NOT NULL REFERENCES source_file(id_source_file),
    run_status VARCHAR(50) NOT NULL,
    script_name VARCHAR(255) NOT NULL,
    script_version VARCHAR(100),
    qa_threshold NUMERIC(5, 4),
    bbox_used TEXT,
    started_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    finished_at TIMESTAMP WITH TIME ZONE,
    error_message TEXT,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    updated_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    CONSTRAINT uq_processing_run_source_script UNIQUE (
        fk_source_file,
        script_name,
        script_version,
        qa_threshold,
        bbox_used
    )
);

CREATE TABLE IF NOT EXISTS region_measurement (
    id_region_measurement INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    fk_region INTEGER NOT NULL REFERENCES region(id_region),
    fk_indicator INTEGER NOT NULL REFERENCES indicator(id_indicator),
    fk_source_file INTEGER NOT NULL REFERENCES source_file(id_source_file),
    fk_processing_run INTEGER NOT NULL REFERENCES processing_run(id_processing_run),
    measurement_start_time TIMESTAMP WITH TIME ZONE NOT NULL,
    measurement_end_time TIMESTAMP WITH TIME ZONE NOT NULL,
    value_mean NUMERIC,
    value_min NUMERIC,
    value_max NUMERIC,
    pixel_count_valid INTEGER NOT NULL,
    qa_threshold NUMERIC(5, 4),
    quality_status VARCHAR(50),
    unit VARCHAR(50) NOT NULL,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    updated_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    CONSTRAINT uq_region_measurement_result UNIQUE (
        fk_region,
        fk_indicator,
        fk_source_file,
        fk_processing_run
    )
);

CREATE INDEX IF NOT EXISTS idx_region_measurement_region_indicator_time
    ON region_measurement(fk_region, fk_indicator, measurement_end_time DESC);

CREATE INDEX IF NOT EXISTS idx_region_measurement_indicator_time
    ON region_measurement(fk_indicator, measurement_end_time DESC);

CREATE INDEX IF NOT EXISTS idx_source_file_external_product_id
    ON source_file(external_product_id);

CREATE INDEX IF NOT EXISTS idx_region_region_code
    ON region(region_code);
