erDiagram
    region {
        integer id_region PK
        string name
        string code
        string region_type
        geometry geometry
        float bbox_lat_min
        float bbox_lat_max
        float bbox_lon_min
        float bbox_lon_max
        datetime created_at
        datetime updated_at
    }

    indicator {
        integer id_indicator PK
        string code
        string name
        string description
        string unit
        boolean is_active
        datetime created_at
        datetime updated_at
    }

    data_source {
        integer id_data_source PK
        string name
        string provider
        string access_url
        string license_name
        string description
        datetime created_at
        datetime updated_at
    }

    data_product {
        integer id_data_product PK
        integer fk_data_source
        string product_code
        string platform
        string instrument
        string processing_level
        string variable_name
        string product_group
        string description
        datetime created_at
        datetime updated_at
    }

    source_file {
        integer id_source_file PK
        integer fk_data_product
        string copernicus_product_id
        string product_name
        string local_file_path
        string file_format
        bigint file_size_bytes
        string checksum
        datetime content_start_time
        datetime content_end_time
        datetime downloaded_at
        datetime created_at
        datetime updated_at
    }

    processing_run {
        integer id_processing_run PK
        integer fk_source_file
        string run_status
        string script_name
        string script_version
        float qa_threshold
        string bbox_used
        datetime started_at
        datetime finished_at
        string error_message
        datetime created_at
        datetime updated_at
    }

    region_measurement {
        integer id_region_measurement PK
        integer fk_region
        integer fk_indicator
        integer fk_source_file
        integer fk_processing_run
        datetime measurement_start_time
        datetime measurement_end_time
        float value_mean
        float value_min
        float value_max
        integer pixel_count_valid
        float qa_threshold
        string unit
        datetime created_at
        datetime updated_at
    }

    data_source ||--o{ data_product : provides
    data_product ||--o{ source_file : has
    source_file ||--o{ processing_run : processed_by
    source_file ||--o{ region_measurement : produces
    processing_run ||--o{ region_measurement : creates
    region ||--o{ region_measurement : has
    indicator ||--o{ region_measurement : measures